# btree-db-server

./: CMakeLists.txt  README.md
allocator/allocator/include/: allocator.h
allocator/allocator/src/: allocator_guardant.cpp
allocator/allocator_boundary_tags/include/: allocator_boundary_tags.h
allocator/allocator_boundary_tags/src/: allocator_boundary_tags.cpp
allocator/allocator_boundary_tags/tests/: allocator_boundary_tags_tests.cpp
allocator/allocator_global_heap/src/: allocator_global_heap.cpp
allocator/allocator_sorted_list/include/: allocator_sorted_list.h
allocator/allocator_sorted_list/src/: allocator_sorted_list.cpp
associative_container/search_tree/binary_search_tree/: CMakeLists.txt
associative_container/search_tree/binary_search_tree/include/: binary_search_tree.h
b-tree/: b_tree.h  search_tree.h
cw/common/include/: storage_interface.h
cw/database/include/: data_base.h
cw/database/src/: data_base.cpp  main.cpp
cw/schema/include/: schema.h
cw/schema/src/: schema.cpp
cw/schemas_pool/include/: schemas_pool.h
cw/schemas_pool/src/: schemas_pool.cpp
cw/server/src/: db_server.cpp  сlient_requests.cpp
cw/string_pool/include/: string_pool.h
cw/string_pool/src/: string_pool.cpp
cw/table/include/: table.h
cw/table/src/: table.cpp  table_test.cpp
cw/test/: test.cpp
cw/user_data/include/: user_data.h
cw/user_data/src/: user_data.cpp
logger/: CMakeLists.txt
logger/client_logger/include/: client_logger.h  client_logger_builder.h
logger/client_logger/src/: client_logger.cpp  client_logger_builder.cpp
logger/client_logger/tests/: client_logger_tests.cpp
source/: .clang-format  CMakeLists.txt  main.cpp
source/allocator/allocator/: CMakeLists.txt
source/allocator/allocator/include/: allocator.h  allocator_test_utils.h
source/allocator/allocator_boundary_tags/: CMakeLists.txt
source/allocator/allocator_buddies_system/: CMakeLists.txt
source/allocator/allocator_global_heap/: CMakeLists.txt
source/allocator/allocator_global_heap/include/: allocator_global_heap.h
source/allocator/allocator_red_black_tree/: CMakeLists.txt
source/allocator/allocator_sorted_list/: CMakeLists.txt
source/associative_container/: CMakeLists.txt
source/associative_container/hash_table/: CMakeLists.txt
source/associative_container/include/: associative_container.h
source/associative_container/search_tree/: CMakeLists.txt
source/associative_container/search_tree/binary_search_tree/: CMakeLists.txt
source/associative_container/search_tree/binary_search_tree/AVL_tree/: CMakeLists.txt
source/associative_container/search_tree/binary_search_tree/red_black_tree/: CMakeLists.txt
source/associative_container/search_tree/binary_search_tree/scapegoat_tree/: CMakeLists.txt
source/associative_container/search_tree/binary_search_tree/splay_tree/: CMakeLists.txt
source/associative_container/search_tree/binary_search_tree/tests/: binary_search_tree_tests.cpp
source/associative_container/search_tree/include/: search_tree.h
source/associative_container/search_tree/indexing_tree/b_plus_tree/: CMakeLists.txt
source/associative_container/search_tree/indexing_tree/b_star_plus_tree/: CMakeLists.txt
source/associative_container/search_tree/indexing_tree/b_star_tree/: CMakeLists.txt
source/associative_container/search_tree/indexing_tree/b_tree/: CMakeLists.txt
source/b-tree/: b_tree.h
source/cw/database/include/: data_base.h
source/cw/database/src/: test_command.txt
source/cw/schema/src/: schema.cpp
source/cw/schemas_pool/include/: schemas_pool.h
source/cw/server/include/: db_server.h
source/cw/string_pool/src/: string_pool.cpp
source/cw/table/include/: table.h
source/cw/table/src/: table.cpp
source/cw/test/: test.cpp
source/cw/user_data/include/: user_data.h
source/logger/client_logger/: CMakeLists.txt
source/logger/client_logger/include/: client_logger.h
source/logger/client_logger/tests/: 1.txt  CMakeLists.txt
source/logger/logger/: CMakeLists.txt
source/logger/logger/include/: logger.h
source/logger/server_logger/: CMakeLists.txt
source/logger/server_logger/include/: server_logger.h
source/logger/server_logger/src/: onemoretest.cpp  server_logger.cpp  server_logger_builder.cpp
source/logger/server_logger/tests/: CMakeLists.txt
source/new/: lines_counter.cpp
source/new/allocator/allocator_boundary_tags/tests/: test1.txt  test2.txt
source/new/allocator/common/: CMakeLists.txt
